[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Scripts/Lose.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Restart001.PNG" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Restart002.PNG" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Menu001.PNG" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Menu002.PNG" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/Quit001.PNG" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/Quit002.PNG" type="Texture" id=7]
[ext_resource path="res://Sprites/Youulose.png" type="Texture" id=8]

[node name="Youlose" type="CanvasLayer"]
layer = 128

[node name="Lose" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BlackOverlay" type="ColorRect" parent="Lose"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.423529 )

[node name="PauseMenu" type="ColorRect" parent="Lose"]
margin_left = 202.896
margin_top = 86.3388
margin_right = 782.896
margin_bottom = 482.339
color = Color( 0.168627, 0.164706, 0.164706, 1 )

[node name="RestartButton" type="TextureButton" parent="Lose/PauseMenu"]
margin_left = 166.279
margin_top = 112.136
margin_right = 391.279
margin_bottom = 181.136
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="MenuButton" type="TextureButton" parent="Lose/PauseMenu"]
margin_left = 166.541
margin_top = 198.772
margin_right = 391.541
margin_bottom = 267.772
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="QuitButton" type="TextureButton" parent="Lose/PauseMenu"]
margin_left = 166.973
margin_top = 284.123
margin_right = 391.973
margin_bottom = 353.123
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Lose/PauseMenu"]
modulate = Color( 0.686275, 0.752941, 0.94902, 1 )
position = Vector2( 283.963, 54.1191 )
scale = Vector2( 0.847941, 0.847941 )
texture = ExtResource( 8 )
[connection signal="pressed" from="Lose/PauseMenu/RestartButton" to="Lose" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Lose/PauseMenu/MenuButton" to="Lose" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Lose/PauseMenu/QuitButton" to="Lose" method="_on_QuitButton_pressed"]
